--- a/newWeB/src/Styles/global.css
+++ b/newWeB/src/Styles/global.css
@@ -333,7 +333,7 @@ p,
   color: var(--color-foreground);
 }
 
-@media  (min-width: 1200px) {
+@media  (max-width: 1200px) {
 
   p,
   .p {
@@ -341,7 +341,7 @@ p,
   }
 }
 
-@media  (min-width: 768px) {
+@media  (max-width: 768px) {
 
   p,
   .p {
