--- a/newWeB/src/Styles/global.css
+++ b/newWeB/src/Styles/global.css
@@ -162,7 +162,7 @@ h1,
   font-family: Poppins;
 }
 
-@media  (max-width: 480px) {
+@media  (min-width: 480px) {
 
   h1,
   .h1 {
@@ -172,7 +172,7 @@ h1,
   }
 }
 
-@media  (max-width: 576px) {
+@media  (min-width: 576px) {
 
   h1,
   .h1 {
@@ -229,10 +229,11 @@ h2,
   color: #D52E32;
 }
 
-@media  (min-width: 576px) {
+@media  (max-width: 576px) {
 
   h2,
   .h2 {
+    text-align: center;
     font-size: 2.8rem;
     line-height: 3.2rem;
   }
@@ -242,6 +243,7 @@ h2,
 
   h2,
   .h2 {
+  
     font-size: 3.2rem;
     line-height: 4rem;
   }
