--- a/newWeB/src/pages/ServiceOverview/Services.css
+++ b/newWeB/src/pages/ServiceOverview/Services.css
@@ -123,9 +123,9 @@ article:has(:hover, :focus) {
     container: card/inline-size;
   }
 
-  .article-body p {
+  /* .article-body p {
     display: none;
-  }
+  } */
 }
 
 @container card (min-width: 380px) {
