--- a/newWeB/src/pages/AboutSection/Approachs/Approachs.css
+++ b/newWeB/src/pages/AboutSection/Approachs/Approachs.css
@@ -310,3 +310,8 @@
     transform: translate(-50%, -50%);
   }
    */
+   @media (max-width: 767px) {
+   .aprroaches {
+    margin-top: 17px;
+  }
+}
